--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </ul>
     </nav>
     <div id="portfolio_corps">
+      <!--Commentaire-->
       <table>
           <tr>
             <td><img src="img/autumn.jpg" alt="photo automne" /></td>
