Une div remplacée par une section pour mieux structurer chaque page html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
     <p>
       <img id="about_photo" src="img/wolf.jpg" alt="photo loup" />
     </p>
-    <div class="corps">
+    <!--<div class="corps">-->
+    <section class="corps">
     <!--corps de la page à propos-->
 
       <h3>À propos</h3>
@@ -33,7 +34,8 @@
         Si vous voulez suivre notre Ecole Simplon Boulogne-sur-Mer sur Twitter, alors rdv sur :
         <a class="contact_coordo" href="https://twitter.com/simplonbsm">@SimplonBSM</a>
       </p>
-    </div>
+    <!--</div>-->
+    </section>
     <footer>
     <!--pied de page-->
       <p>
