--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
         <li class="navli"><a class="lien" id="lien_contact" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="corps">
+    <!--<div class="corps">-->
+    <section class="corps">
     <!--corps de la page contact-->
       <h3>Informations générales</h3>
       <br>
@@ -40,7 +41,8 @@
         <img class="contact_img" src="img/twitter.png" alt="logo twitter" />
         <a class="contact_coordo" href="https://twitter.com/simplonbsm">@SimplonBSM</a>
       </p>
-    </div>
+    <!--</div>-->
+    </section>
     <footer>
     <!--pied de page-->
       <p>
