--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <li class="navli"><a class="lien" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div id="portfolio_corps">
+    <!--<div id="portfolio_corps">-->
+    <section id="portfolio_corps">
       <table>
           <tr>
             <td><img src="img/autumn.jpg" alt="photo automne" /></td>
@@ -38,7 +39,8 @@
             <td class="text_img">Été</td>
           </tr>
       </table>
-    </div>
+    <!--</div>-->
+    </section>
     <footer>
     <!--pied de page-->
       <p>
