Nouvelle solution avec div pour les 4 images dans index.html et stylesheet.css et conservation de la solution avec tableau dans old_index.html et old_stylesheet.css

--- a/old_index.html
+++ b/old_index.html
@@ -5,15 +5,12 @@
     <link rel="stylesheet" href="css/stylesheet.css" >
     <title>Portfolio</title>
   </head>
-  
   <body>
-
     <header>
     <!--entête-->
       <h2>David MINET</h2>
       <p id="qualite">Apprenant @ Simplon.co Boulogne-sur-Mer</p>
     </header>
-
     <nav>
     <!--barre de navigation-->
       <ul>
@@ -22,33 +19,28 @@
         <li class="navli"><a class="lien" href="contact.html">Contact</a></li>
       </ul>
     </nav>
-
+    <!--<div id="portfolio_corps">-->
     <section id="portfolio_corps">
-    <!--corps de la page-->
-          <div id="div_autumn">
-            <img src="img/autumn.jpg" alt="photo automne" />
-            <p class="text_img">Automne</p>
-          </div>
-
-          <div id="div_winter">
-            <img src="img/winter.jpg" alt="photo hiver" />
-            <p class="text_img">Hiver</p>
-          </div>
-
-          <br>
-
-          <div id="div_spring">
-            <img src="img/spring.jpg" alt="photo printemps" />
-            <p class="text_img">Printemps</p>
-          </div>
-
-          <div id="div_summer">
-            <img src="img/summer.jpg" alt="photo été" />
-            <p class="text_img">Été</p>
-          </div>
-
+      <table>
+          <tr>
+            <td><img src="img/autumn.jpg" alt="photo automne" /></td>
+            <td><img src="img/winter.jpg" alt="photo hiver" /></td>
+          </tr>
+          <tr>
+            <td class="text_img">Automne</td>
+            <td class="text_img">Hiver</td>
+          </tr>
+          <tr>
+            <td><img src="img/spring.jpg" alt="photo printemps" /></td>
+            <td><img src="img/summer.jpg" alt="photo été" /></td>
+          </tr>
+          <tr>
+            <td class="text_img">Printemps</td>
+            <td class="text_img">Été</td>
+          </tr>
+      </table>
+    <!--</div>-->
     </section>
-
     <footer>
     <!--pied de page-->
       <p>
@@ -59,7 +51,5 @@
         © 2015 David Minet, Simplon
       </p>
     </footer>
-
   </body>
-
 </html>
