--- a/index.html
+++ b/index.html
@@ -1,65 +1,179 @@
+<!-- nom du projet : site_perso
+     description : 3 pages (portfolio, à propos, contact)
+     entête, barre de navigation et pied de page communs aux 3 pages
+     date : 27/11/2015
+     modif : 05/01/2016 pour insérer du bootstrap dans la page portfolio -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/stylesheet.css" >
-    <title>Portfolio</title>
-  </head>
-  
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/stylesheet.css" >
+  <title>Portfolio</title>
+</head>
 
-    <header>
+<body>
+
+  <header>
     <!--entête-->
-      <h2>David MINET</h2>
-      <p id="qualite">Apprenant @ Simplon.co Boulogne-sur-Mer</p>
-    </header>
+    <h2>David MINET</h2>
+    <p id="qualite">Apprenant @ Simplon.co Boulogne-sur-Mer</p>
+  </header>
 
-    <nav>
-    <!--barre de navigation-->
-      <ul>
-        <li class="navli"><a class="lien" id="lien_portfolio" href="index.html">Portfolio</a></li>
-        <li class="navli"><a class="lien" href="about.html">À propos</a></li>
-        <li class="navli"><a class="lien" href="contact.html">Contact</a></li>
+<nav class="navbar navbar-inverse center">
+  <!--barre de navigation-->
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse navbar-inner">
+      <ul class="nav navbar-nav">
+        <li class="active"><a class="lien" id="lien_portfolio" href="index.html">Portfolio</a></li>
+        <li><a class="lien" href="about.html">À propos</a></li>
+        <li><a class="lien" href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 
-    <section id="portfolio_corps">
-    <!--corps de la page-->
-          <div id="div_autumn">
-            <img src="img/autumn.jpg" alt="photo automne" />
-            <p class="text_img">Automne</p>
+<section id="portfolio_corps">
+  <!--corps de la page-->
+<div class="container">
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="img/autumn.jpg" alt="photo automne">
+            <div class="carousel-caption">
+              <h4>Automne</h4>
+            </div>
           </div>
 
-          <div id="div_winter">
-            <img src="img/winter.jpg" alt="photo hiver" />
-            <p class="text_img">Hiver</p>
+          <div class="item">
+            <img src="img/winter.jpg" alt="photo hiver">
+            <div class="carousel-caption">
+              <h4>Hiver</h4>
+            </div>
           </div>
 
-          <br>
-
-          <div id="div_spring">
-            <img src="img/spring.jpg" alt="photo printemps" />
-            <p class="text_img">Printemps</p>
+          <div class="item">
+            <img src="img/spring.jpg" alt="photo printemps">
+            <div class="carousel-caption">
+              <h4 id="hiliteCaption">Printemps</h4>
+            </div>
           </div>
 
-          <div id="div_summer">
-            <img src="img/summer.jpg" alt="photo été" />
-            <p class="text_img">Été</p>
+          <div class="item">
+            <img src="img/summer.jpg" alt="photo été">
+            <div class="carousel-caption">
+              <h4>Été</h4>
+            </div>
           </div>
+        </div>
 
-    </section>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
 
-    <footer>
-    <!--pied de page-->
-      <p>
-        <a href="https://twitter.com"><img src="img/twitter-wrap.png" alt="logo twitter" /></a>
-        <a href="https://fr-fr.facebook.com"><img src="img/facebook-wrap.png" alt="logo facebook" /></a>
-      </p>
-      <p>
-        © 2015 David Minet, Simplon
-      </p>
-    </footer>
+      </div> <!-- myCarousel -->
 
-  </body>
+      <p id="countDiapo"></p>
+
+</div> <!-- container -->
+</section>
+<br>
+<section class="container">
+  <div class="row">
+    <div class="col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-sm-3 col-md-3 col-lg-3">
+      <button id="boutonCollapse" type="button" data-toggle="collapse" data-target="#Exemple">
+        Dates des saisons
+      </button>
+      <div class="collapse" id="Exemple">
+        Automne : 23 septembre / 21 décembre <br>
+        Hiver : 22 décembre / 19 mars <br>
+        Printemps : 20 mars / 20 juin <br>
+        Été : 21 juin / 22 septembre
+      </div>
+    </div>
+    <div class="col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-sm-2 col-md-2 col-lg-2">
+      <div class="btn-group">
+        <h6 data-toggle="dropdown"><span class="label label-default">Les 4 saisons</span></h6>
+        <ul class="dropdown-menu">
+          <li><a href="#">L'automne</a></li>
+          <li><a href="#">L'hiver</a></li>
+          <li><a href="#">Le printemps</a></li>
+          <li><a href="#">L'été</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-sm-3 col-md-3 col-lg-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
+      <a id="textCharg" class="btn btn-success" data-loading-text ="Chargement en cours ...">Texte à charger</a>
+    </div>
+  </div>
+
+</section>
+<br>
+<footer>
+  <!--pied de page-->
+  <p>
+    <a href="https://twitter.com"><img src="img/twitter-wrap.png" alt="logo twitter" /></a>
+    <a href="https://fr-fr.facebook.com"><img src="img/facebook-wrap.png" alt="logo facebook" /></a>
+  </p>
+  <p>
+    © 2015 David Minet, Simplon
+  </p>
+</footer>
+
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+<script>
+function affichage() {
+  var total = $('.item').length;
+  var current = $('.item.active').index() + 1;
+  $('#countDiapo').text(current + ' / '+ total);
+}
+$(function () {
+  affichage();
+  $('.carousel').on('slid.bs.carousel', function () {
+    affichage();
+  });
+});
+$('h6').mouseover(function() {
+  $(this).dropdown('toggle');
+});
+$(function (){
+  $('#textCharg').click(function () {
+    with($(this)) {
+      button('loading');
+      setTimeout(function () {
+        button('reset');
+      }, 4000);
+    }
+  })
+});
+</script>
+
+</body>
 
 </html>
